--- a/techpack/audio/asoc/codecs/tfa98xx/Kbuild
+++ b/techpack/audio/asoc/codecs/tfa98xx/Kbuild
@@ -84,8 +84,7 @@ CDEFINES +=	-DANI_LITTLE_BYTE_ENDIAN \
 		-DANI_OS_TYPE_ANDROID=6 \
 		-DPTT_SOCK_SVC_ENABLE \
 		-Wall\
-		-D__linux__ \
-		-DDEBUG
+		-D__linux__
 
 
 CDEFINES += -DCONFIG_TARGET_PRODUCT_RENOIR
