renoir_defconfig: Drop slmk
Doesn't work well on terrible 5.4 mm.

Signed-off-by: Kazuki Hashimoto <kazukih@tuta.io>

--- a/arch/arm64/configs/renoir_defconfig
+++ b/arch/arm64/configs/renoir_defconfig
@@ -5,6 +5,7 @@ CONFIG_PREEMPT=y
 CONFIG_TASKSTATS=y
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
+CONFIG_PSI=y
 CONFIG_RCU_EXPERT=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_RCU_NOCB_CPU=y
@@ -142,10 +143,10 @@ CONFIG_BINFMT_MISC=y
 CONFIG_CMA=y
 CONFIG_CMA_AREAS=11
 CONFIG_ZSMALLOC=y
+CONFIG_HAVE_USERSPACE_LOW_MEMORY_KILLER=y
 # CONFIG_SPECULATIVE_PAGE_FAULT is not set
 # CONFIG_PROCESS_RECLAIM is not set
 # CONFIG_MULTIPLE_KSWAPD is not set
-CONFIG_VMSTAT_INTERVAL=20
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
@@ -761,7 +762,6 @@ CONFIG_QCOM_LLCC_PMU=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDERFS=y
-CONFIG_ANDROID_SIMPLE_LMK=y
 # CONFIG_ANDROID_KABI_RESERVE is not set
 # CONFIG_ANDROID_VENDOR_OEM_DATA is not set
 # CONFIG_NVMEM_SYSFS is not set
