--- a/arch/arm64/configs/renoir_defconfig
+++ b/arch/arm64/configs/renoir_defconfig
@@ -445,6 +445,7 @@ CONFIG_POWER_RESET_QCOM_DOWNLOAD_MODE_DEFAULT=y
 CONFIG_POWER_RESET_QCOM_REBOOT_REASON=y
 CONFIG_QTI_BATTERY_CHARGER=y
 CONFIG_BQ2597X=y
+CONFIG_RENOIR_FOR_BUILD=y
 CONFIG_SENSORS_QTI_AMOLED_ECM=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_EMERGENCY_POWEROFF_DELAY_MS=10000
