renoir_defconfig: Enable init_stack_none
Signed-off-by: Kazuki Hashimoto <kazukih@tuta.io>

--- a/arch/arm64/configs/renoir_defconfig
+++ b/arch/arm64/configs/renoir_defconfig
@@ -804,6 +804,7 @@ CONFIG_SECURITY_SELINUX=y
 # CONFIG_SECURITY_SELINUX_AVC_STATS is not set
 # CONFIG_INTEGRITY is not set
 CONFIG_LSM="selinux"
+CONFIG_INIT_STACK_NONE=y
 CONFIG_CRYPTO_ADIANTUM=y
 CONFIG_CRYPTO_POLY1305=y
 CONFIG_CRYPTO_LZ4=y
