--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -52,7 +52,7 @@ else
 KBUILD_CFLAGS	+= -mgeneral-regs-only
 endif
 
-KBUILD_CFLAGS	+= -mcpu=cortex-a55
+KBUILD_CFLAGS	+= -mcpu=cortex-a55+crypto+crc
 
 KBUILD_CFLAGS	+= $(compat_vdso) $(cc_has_k_constraint)
 KBUILD_CFLAGS	+= -fno-asynchronous-unwind-tables
