--- a/arch/arm64/configs/renoir_defconfig
+++ b/arch/arm64/configs/renoir_defconfig
@@ -25,6 +25,7 @@ CONFIG_CGROUP_BPF=y
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_PID_NS is not set
+CONFIG_SCHED_CASS=y
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_BZIP2 is not set
